--- a/BLOC_1/kayak.ipynb
+++ b/BLOC_1/kayak.ipynb
@@ -299,7 +299,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "api_key = \"9cd964719fc6d1c11faa95e546f0de6b\"\n",
+    "api_key = \"*********\"\n",
     "\n",
     "def get_weather(latitude, longitude):\n",
     "    url = f\"https://api.openweathermap.org/data/2.5/onecall?lat={latitude}&lon={longitude}&exclude=current,minutely,hourly,alerts&units=metric&lang=fr&appid={api_key}\"\n",
