--- a/BLOC_2/speed_dating.ipynb
+++ b/BLOC_2/speed_dating.ipynb
@@ -62913,6 +62913,18 @@
     "match = ['attr','sinc','intel','fun','amb','shar']\n",
     "data.groupby(['gender','match'])[match].mean()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This groupby show the average score each sex give to the people they met during the event. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
