--- a/BLOC_2/speed_dating.ipynb
+++ b/BLOC_2/speed_dating.ipynb
@@ -62918,13 +62918,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This groupby show the average score each sex give to the people they met during the event. "
+    "This groupby show the average score each sex give to the people they met during the event. We can see that biggest differences between match or not match are made in attractive, fun and shared interests score. \n",
+    "We can probably understand that attractiveness, humor and shared interest are the most important attributes to get a date and it would not be surprising because it can be hard to judge intelligence, sincerity or the ambition of someone with only 4 minutes talk but beauty and humor can be displayed fastly and with a little discussion we can easily know if peoples have shared interests. \n",
+    "But it's important to point out that the scores are relatively balanced, so it's difficult to say with any certainty that these attributes are doing all the work."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
