modif erreur texte bloc3

--- a/BLOC_3/uber/uber.ipynb
+++ b/BLOC_3/uber/uber.ipynb
@@ -1258,10 +1258,10 @@
     "    hotzones = filtered_df.groupby(['cluster','Lat','Lon']).size().reset_index()\n",
     "    return hotzones\n",
     "\n",
-    "# Choisissez une heure et un jour de la semaine spécifiques\n",
+    "# Choisissez une heure et un jour de la semaine\n",
     "df = df_sampled\n",
-    "target_hour = 22  # Par exemple, midi\n",
-    "target_day_of_week = \"Tuesday\" # Par exemple, mercredi (0 = lundi, 1 = mardi, ..., 6 = dimanche)\n",
+    "target_hour = 22  \n",
+    "target_day_of_week = \"Tuesday\"\n",
     "\n",
     "hotzones_data = get_hotzones(df, target_hour, target_day_of_week)\n",
     "\n",
